--- a/style.css
+++ b/style.css
@@ -7,8 +7,7 @@ body {
     -moz-osx-font-smoothing: grayscale;
 }
 
-a,
-button {
+a,button {
     transition: all .3s ease-in-out;
     outline: none!important;
 }
@@ -31,7 +30,6 @@ a:hover {
     width: 100%;
     clear: both;
     background: 50% 50% no-repeat;
-    padding: 0 50px;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -317,8 +315,7 @@ a:hover {
 
 .navbar .nav {
     padding-top: 2px;
-    margin-right: -16px;
-    float: right;
+    margin-right: 16px;
     z-index: 1;
 }
 
@@ -355,12 +352,7 @@ a:hover {
     float: left;
 }
 
-.nav-invert .navbar-header,
-.nav-invert .navbar-brand {
-    float: right;
-    position: relative;
-    z-index: 2;
-}
+
 
 @media (min-width: 768px) {
     .site-navigation {
