--- a/style.css
+++ b/style.css
@@ -88,10 +88,6 @@ a:hover {
     right: 0;
 }
 
-.texture-paper::before {
-    background: url("img/texture-paper.png");
-    background-size: 280px 280px;
-}
 
 .b-parallax {
     background-attachment: fixed;
@@ -315,9 +311,10 @@ a:hover {
 
 .navbar .nav {
     padding-top: 2px;
-    margin-right: 16px;
+    margin-right: -16px;
+    float: right;
     z-index: 1;
-}
+  }
 
 .nav > li {
     float: left;
@@ -646,9 +643,6 @@ a {
     color: #575757!important;
 }
 
-.container {
-    max-width: 1000px;
-}
 
 .hero-bloc-text {
     font-size: 38px;
