--- a/style.css
+++ b/style.css
@@ -225,7 +225,7 @@ a:hover {
 .l-bloc h5 a,
 .l-bloc h6 a,
 .l-bloc p a {
-    color: rgba(0, 0, 0, .6);
+   color: white;
 }
 
 .d-bloc .panel .a-btn:hover,
@@ -248,6 +248,10 @@ a:hover {
 
 .l-bloc .navbar-toggle .icon-bar {
     color: rgba(0, 0, 0, .6);
+}
+
+.row .col-sm-12 a {
+    color: white;
 }
 
 .d-bloc .panel .btn-wire,
@@ -801,10 +805,6 @@ h4 {
 
 .bg-dots-bg {
     background-image: url("img/dots-bg.png");
-}
-
-.bg-lines-h2-bg {
-    background-image: url("img/lines-h2-bg.png");
 }
 
 .bg-banniere {
