--- a/style.css
+++ b/style.css
@@ -808,11 +808,11 @@ h4 {
 }
 
 .bg-banniere {
-    background-image: url("img/agence-la-panthere.jpg");
+    background-image: url("Image/Agence La Panthère Entreprise Web Design à Lyon.jpg");
 }
 
 .bg-presentation {
-    background-image: url("img/image-de-presentation.bmp");
+    background-image: url("Image/Agence-La-Panthère-Entreprise-Web-Design-à-Lyon - Présentation.jpg");
 }
 
 @media (max-width: 1024px) {
