--- a/style.css
+++ b/style.css
@@ -762,7 +762,7 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-    background-color: #F3976C;
+    background-color: #c23e0a;
 }
 
 .tc-white {
@@ -774,7 +774,7 @@ h4 {
 }
 
 .btn-atomic-tangerine {
-    background: #F3976C;
+    background: #c23e0a;
     color: #FFFFFF!important;
 }
 
@@ -792,7 +792,7 @@ h4 {
 }
 
 .ltc-atomic-tangerine {
-    color: #F3976C!important;
+    color: #c23e0a!important;
 }
 
 .ltc-atomic-tangerine:hover {
