--- a/style.css
+++ b/style.css
@@ -809,11 +809,11 @@ h4 {
 }
 
 .bg-banniere {
-    background-image: url("img/Agence La Panthère Entreprise Web Design à Lyon.jpg");
+    background-image: url("img/Agence-La-Panthère-Entreprise-WebDesign-à-Lyon-.jpg");
 }
 
 .bg-presentation {
-    background-image: url("img/Agence-La-Panthère-Entreprise-Web-Design-à-Lyon - Présentation.jpg");
+    background-image: url("img/Agence-La-Panthère-Entreprise-Web-Design-à-Lyon-Présentation.jpg");
 }
 
 @media (max-width: 1024px) {
