--- a/style.css
+++ b/style.css
@@ -1030,5 +1030,8 @@ h4 {
     .bloc-mob-center-text {
         text-align: center;
     }
+    .social{
+        display: flex;
+        justify-content: space-between;
+    }
 }
-
