--- a/style.css
+++ b/style.css
@@ -809,7 +809,7 @@ h4 {
 }
 
 .bg-banniere {
-    background-image: url("img/AgenceLaPanthère.jpg");
+    background-image: url("img/Agence-La-Panthere-Entreprise-WebDesign-Lyon.jpg");
 }
 
 .bg-presentation {
