--- a/style.css
+++ b/style.css
@@ -809,7 +809,7 @@ h4 {
 }
 
 .bg-banniere {
-    background-image: url("img/Agencelapanthere.jpg");
+    background-image: url("img/agence-la-panthere.jpg");
 }
 
 .bg-presentation {
