--- a/style.css
+++ b/style.css
@@ -7,7 +7,8 @@ body {
     -moz-osx-font-smoothing: grayscale;
 }
 
-a,button {
+a,
+button {
     transition: all .3s ease-in-out;
     outline: none!important;
 }
@@ -30,6 +31,7 @@ a:hover {
     width: 100%;
     clear: both;
     background: 50% 50% no-repeat;
+    padding: 0 50px;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -88,6 +90,10 @@ a:hover {
     right: 0;
 }
 
+.texture-paper::before {
+    background: url("img/texture-paper.png");
+    background-size: 280px 280px;
+}
 
 .b-parallax {
     background-attachment: fixed;
@@ -225,7 +231,7 @@ a:hover {
 .l-bloc h5 a,
 .l-bloc h6 a,
 .l-bloc p a {
-   color: white;
+    color: rgba(0, 0, 0, .6);
 }
 
 .d-bloc .panel .a-btn:hover,
@@ -248,10 +254,6 @@ a:hover {
 
 .l-bloc .navbar-toggle .icon-bar {
     color: rgba(0, 0, 0, .6);
-}
-
-.row .col-sm-12 a {
-    color: white;
 }
 
 .d-bloc .panel .btn-wire,
@@ -318,7 +320,7 @@ a:hover {
     margin-right: -16px;
     float: right;
     z-index: 1;
-  }
+}
 
 .nav > li {
     float: left;
@@ -353,7 +355,12 @@ a:hover {
     float: left;
 }
 
-
+.nav-invert .navbar-header,
+.nav-invert .navbar-brand {
+    float: right;
+    position: relative;
+    z-index: 2;
+}
 
 @media (min-width: 768px) {
     .site-navigation {
@@ -647,6 +654,9 @@ a {
     color: #575757!important;
 }
 
+.container {
+    max-width: 1000px;
+}
 
 .hero-bloc-text {
     font-size: 38px;
@@ -667,7 +677,7 @@ a {
 }
 
 p {
-    font-size: 15px;
+    font-size: 11px;
 }
 
 .tight-width-whitespace {
@@ -731,7 +741,6 @@ h4 {
 
 .portfolio-thumb {
     margin-bottom: 24px;
-    width: 100%;
 }
 
 .portfolio-row {
@@ -744,7 +753,7 @@ h4 {
 }
 
 .black-background {
-    background-color: rgba(0, 0, 0, 0.8);
+    background-color: rgba(165, 147, 99, 0.7);
     padding: 40px 40px 40px 40px;
 }
 
@@ -762,19 +771,15 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-    background-color: #c23e0a;
+    background-color: #F3976C;
 }
 
 .tc-white {
-    color: white!important;
-}
-
-.col-sm-12 .mg-lg .tc-white {
-    color:white;
+    color: #F3976C!important;
 }
 
 .btn-atomic-tangerine {
-    background: #c23e0a;
+    background: #F3976C;
     color: #FFFFFF!important;
 }
 
@@ -792,7 +797,7 @@ h4 {
 }
 
 .ltc-atomic-tangerine {
-    color: #c23e0a!important;
+    color: #F3976C!important;
 }
 
 .ltc-atomic-tangerine:hover {
@@ -808,12 +813,16 @@ h4 {
     background-image: url("img/dots-bg.png");
 }
 
+.bg-lines-h2-bg {
+    background-image: url("img/lines-h2-bg.png");
+}
+
 .bg-banniere {
     background-image: url("img/agence-la-panthere.jpg");
 }
 
 .bg-presentation {
-    background-image: url("img/EntrepriseWebDesignLyon.jpg");
+    background-image: url("img/image-de-presentation.bmp");
 }
 
 @media (max-width: 1024px) {
@@ -1029,9 +1038,5 @@ h4 {
 @media (max-width: 767px) {
     .bloc-mob-center-text {
         text-align: center;
-    }
-    .social{
-        display: flex;
-        justify-content: space-between;
     }
 }
